<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="mdtp_date_v1_monthyear">MMMM yyyy</string>
    <string name="mdtp_date_v2_daymonthyear">EEE, MMM dd</string>
    <string name="mdtp_day_picker_description">Month grid of days</string>
    <string name="mdtp_deleted_key">%1$s deleted</string>
    <string name="mdtp_done_label">Done</string>
    <string name="mdtp_hour_picker_description">Hours circular slider</string>
    <string name="mdtp_item_is_selected">%1$s selected</string>
    <string name="mdtp_minute_picker_description">Minutes circular slider</string>
    <string name="mdtp_select_day">Select month and day</string>
    <string name="mdtp_select_hours">Select hours</string>
    <string name="mdtp_select_minutes">Select minutes</string>
    <string name="mdtp_select_year">Select year</string>
    <string name="mdtp_year_picker_description">Year list</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="mdtp_cancel">?unknown_ref: 1040000</string>
    <string name="provider_settings_message">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="provider_settings_no">No</string>
    <string name="provider_settings_yes">Yes</string>
    <string name="mdtp_day_of_week_label_typeface">sans-serif-light</string>
    <string name="Copy_this_link">Click on this link:</string>
    <string name="Sorry_no_data_found">Sorry, no data found. Please try after some time</string>
    <string name="We_are_unable_to_get_your_email_id_from_login_Pleaseuse_Google_or_manual_Login_to_access_the_app">We are unable to get your email id from Facebook login, Please use Google or manual Login to access the app</string>
    <string name="You_re_about_to_call_the_following">You\'re about to call the following:</string>
    <string name="Your_appointment_was_successfully_saved_to_your_default_calendar">Your appointment was successfully saved to your default calendar.</string>
    <string name="a_link_will_be_sent_to__your_email_id">A link will be sent to your email id. Kindly click it to change your password.</string>
    <string name="a_new_password_has_been_sent_to_your_email_address">A new password has been sent to your Email address.</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="account_created">Account Created</string>
    <string name="activate">Activate</string>
    <string name="activated">Activated</string>
    <string name="active">Active</string>
    <string name="add_new_doctor">Add new Doctor</string>
    <string name="add_staff">Add Staff</string>
    <string name="address">Enter an Address</string>
    <string name="address_field">address</string>
    <string name="address_field_c">Address</string>
    <string name="address_patient">Address</string>
    <string name="age">Age</string>
    <string name="agree">Agree</string>
    <string name="alert">Alert</string>
    <string name="app_name">Tik Tok Doc</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_appointment">Cancel \n Appointment</string>
    <string name="email_address">email address</string>
    <string name="for_scheduling_a_concierge_telemedicine">For scheduling a Concierge Telemedicine\nvisit with your dcotor</string>
    <string name="forget_password_title">Forgot password</string>
    <string name="gallery">Gallery</string>
    <string name="gender">Gender</string>
    <string name="hide">hide</string>
    <string name="make_your_choice">Make Your Choice</string>
    <string name="name">Name</string>
    <string name="negative">Negative</string>
    <string name="neutral">Neutral</string>
    <string name="ok_dialog">Ok</string>
    <string name="phone_number">phone number</string>
    <string name="positive">Positive</string>
    <string name="reset_password">Reset Password</string>
    <string name="schedule">Schedule</string>
    <string name="see_you_next_time">See you next time!</string>
    <string name="start_vides_visit">Start Video Visit</string>
    <string name="thank_you">Thank you!</string>
    <string name="video_call">Video Call</string>
</resources>