<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="#b3000000" android:layout_width="match_parent" android:layout_height="match_parent"
    <RelativeLayout android:id="@+id/dialog_rel" android:background="@drawable/popup_bg_bg" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_15sdp" android:layout_alignParentBottom="true">
        <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/login_line_color" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/heading" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a0177" android:text="@string/make_your_choice" />
        <TextView android:textSize="@dimen/_17sdp" android:textColor="@color/camera_dialog_text" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/camera_text" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a0177" android:text="@string/camera" android:layout_below="@+id/heading" />
        <TextView android:textSize="@dimen/_17sdp" android:textColor="@color/camera_dialog_text" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/open_gallery_text" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a0177" android:text="@string/gallery" android:layout_below="@+id/camera_text" />
        <TextView android:textSize="@dimen/_17sdp" android:textStyle="bold" android:textColor="@color/camera_dialog_text" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/cancel_text" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a0177" android:text="@string/cancel" android:layout_below="@+id/open_gallery_text" />
    </RelativeLayout>
</RelativeLayout>
