<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:padding="@dimen/_20sdp" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:background="@drawable/only_blue_border" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_centerVertical="true">
        <TextView android:textSize="@dimen/_14sdp" android:textColor="@color/app_text" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/dialog_message" android:paddingLeft="@dimen/_10sdp" android:paddingTop="@dimen/_10sdp" android:paddingRight="@dimen/_10sdp" android:paddingBottom="@dimen/_10sdp" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="?attr/actionBarSize" android:text="@string/name" style="@style/CustomTextAppearance_Regular" />
        <View android:background="@color/light_grey" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a008e" />
        <LinearLayout android:orientation="horizontal" android:paddingTop="@dimen/_10sdp" android:paddingBottom="@dimen/_10sdp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/_14sdp" android:textColor="@color/app_text" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/action_negative" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="match_parent" android:text="@string/negative" android:layout_weight="1.0" style="@style/CustomTextAppearance_Regular" />
            <TextView android:textSize="@dimen/_14sdp" android:textColor="@color/app_text" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/action_neutral" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="match_parent" android:layout_marginLeft="0.25dp" android:text="@string/neutral" android:layout_weight="1.0" android:textAllCaps="false" style="@style/CustomTextAppearance_Regular" />
            <TextView android:textSize="@dimen/_14sdp" android:textColor="@color/app_text" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/action_positive" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="match_parent" android:layout_marginLeft="0.25dp" android:text="@string/positive" android:layout_weight="1.0" android:textAllCaps="false" style="@style/CustomTextAppearance_Regular" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
