<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:padding="@dimen/_16sdp" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:background="@drawable/only_blue_border" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_centerInParent="true"
        <LinearLayout android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a0108">
            <TextView android:textSize="@dimen/_14sdp" android:textColor="@color/white" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/title" android:background="@color/dash_baord_pat" android:paddingLeft="@dimen/_10sdp" android:paddingRight="@dimen/_10sdp" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/thank_you" style="@style/CustomTextAppearance_Bold" />
        </LinearLayout>
        <View android:background="@color/dash_baord_pat" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x39999a31" />
        <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/app_text" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/dialog_message" android:paddingLeft="@dimen/_10sdp" android:paddingTop="@dimen/_15sdp" android:paddingRight="@dimen/_10sdp" android:paddingBottom="@dimen/_15sdp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/for_scheduling_a_concierge_telemedicine" style="@style/CustomTextAppearance_Light" />
        <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/dash_baord_doc" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/text2" android:paddingLeft="@dimen/_10sdp" android:paddingRight="@dimen/_10sdp" android:paddingBottom="@dimen/_5sdp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/see_you_next_time" style="@style/CustomTextAppearance_Light" />
        <View android:background="@color/dash_baord_pat" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x39999a31" />
        <TextView android:textSize="@dimen/_14sdp" android:textColor="@color/white" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/action_neutral" android:background="@color/dash_baord_pat" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a0108" android:text="@string/ok_dialog" />
    </LinearLayout>
</RelativeLayout>
