<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:padding="@dimen/_16sdp" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:background="@drawable/only_blue_border" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <TextView android:textSize="@dimen/_14sdp" android:textColor="@color/black" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/title" android:paddingLeft="@dimen/_10sdp" android:paddingTop="@dimen/_15sdp" android:paddingRight="@dimen/_10sdp" android:paddingBottom="@dimen/_15sdp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/alert" style="@style/CustomTextAppearance_Bold" />
        <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/app_text" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/dialog_message" android:paddingLeft="@dimen/_10sdp" android:paddingRight="@dimen/_10sdp" android:paddingBottom="@dimen/_15sdp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/app_name" style="@style/CustomTextAppearance_Regular" />
        <View android:background="@color/light_grey" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x20000031" />
        <TextView android:textSize="@dimen/_14sdp" android:textColor="@color/camera_dialog_text" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/action_neutral" android:padding="@dimen/_10sdp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/ok_dialog" style="@style/CustomTextAppearance_Regular" />
    </LinearLayout>
</RelativeLayout>
