<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res-auto" card_view:id="@id/parent" card_view:layout_width="match_parent" card_view:layout_height="match_parent">
    <ImageView card_view:background="@drawable/header" card_view:layout_width="match_parent" card_view:layout_height="UNKNOWN_DATA_0x7f0a0020" />
    <RelativeLayout card_view:id="@+id/img_header" card_view:background="@drawable/profile_circle" card_view:padding="@dimen/_7sdp" card_view:layout_width="UNKNOWN_DATA_0x7f0a0020" card_view:layout_height="UNKNOWN_DATA_0x7f0a0020" card_view:layout_marginTop="@dimen/_50sdp" card_view:layout_centerHorizontal="true">
        <de.hdodenhof.circleimageview.CircleImageView card_view:id="@+id/img_profile" card_view:layout_width="match_parent" card_view:layout_height="match_parent" card_view:src="@drawable/profile_img" />
    </RelativeLayout>
    <ScrollView card_view:layout_width="match_parent" card_view:layout_height="wrap_content" card_view:layout_below="@+id/img_header" card_view:layout_alignParentLeft="true">
        <LinearLayout card_view:orientation="vertical" card_view:paddingLeft="@dimen/_15sdp" card_view:paddingRight="@dimen/_15sdp" card_view:layout_width="match_parent" card_view:layout_height="wrap_content">
            <TextView card_view:textSize="@dimen/_16sdp" card_view:textColor="@color/black" card_view:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" card_view:id="@+id/tv_name" card_view:paddingLeft="@dimen/_20sdp" card_view:paddingRight="@dimen/_20sdp" card_view:layout_width="match_parent" card_view:layout_height="wrap_content" card_view:layout_marginTop="@dimen/_5sdp" card_view:text="@string/name" style="@style/CustomTextAppearance_Semibold" />
            <TextView card_view:textSize="@dimen/_12sdp" card_view:textColor="@color/app_text" card_view:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" card_view:id="@+id/tv_address" card_view:layout_width="wrap_content" card_view:layout_height="wrap_content" card_view:text="" card_view:maxLines="1" card_view:drawableLeft="@drawable/location_pin" card_view:drawablePadding="@dimen/_5sdp" style="@style/CustomTextAppearance_Light" />
            <android.support.v7.widget.CardView card_view:layout_width="match_parent" card_view:layout_height="wrap_content" card_view:cardUseCompatPadding="true">
                <LinearLayout card_view:orientation="vertical" card_view:paddingTop="@dimen/_5sdp" card_view:paddingBottom="@dimen/_5sdp" card_view:layout_width="match_parent" card_view:layout_height="wrap_content">
                    <TextView card_view:textSize="@dimen/_14sdp" card_view:textColor="@color/black" card_view:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" card_view:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" card_view:layout_width="wrap_content" card_view:layout_height="wrap_content" card_view:text="@string/schedule" card_view:maxLines="1" card_view:drawableLeft="@drawable/calender_icon" card_view:drawablePadding="@dimen/_10sdp" style="@style/CustomTextAppearance_Regular" />
                    <TextView card_view:textSize="@dimen/_12sdp" card_view:textColor="@color/app_text" card_view:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" card_view:id="@+id/tv_schedule" card_view:layout_width="match_parent" card_view:layout_height="wrap_content" card_view:layout_marginLeft="@dimen/_15sdp" card_view:text="" card_view:maxLines="1" card_view:layout_alignParentRight="true" card_view:layout_centerVertical="true" style="@style/CustomTextAppearance_Light" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <ImageView card_view:layout_width="match_parent" card_view:layout_height="wrap_content" card_view:layout_marginTop="@dimen/_10sdp" card_view:layout_marginBottom="@dimen/_10sdp" card_view:src="@drawable/text" />
            <android.support.v7.widget.CardView card_view:layout_width="match_parent" card_view:layout_height="wrap_content" card_view:cardUseCompatPadding="true">
                <LinearLayout card_view:orientation="vertical" card_view:layout_width="match_parent" card_view:layout_height="wrap_content">
                    <TextView card_view:textSize="@dimen/_14sdp" card_view:textColor="@color/black" card_view:gravity="top|bottom|center_vertical|fill_vertical|center|fill" card_view:id="@+id/tv_gender" card_view:background="@color/light_white" card_view:paddingLeft="@dimen/_10sdp" card_view:paddingTop="@dimen/_5sdp" card_view:paddingRight="@dimen/_10sdp" card_view:paddingBottom="@dimen/_5sdp" card_view:layout_width="match_parent" card_view:layout_height="wrap_content" card_view:text="@string/gender" card_view:drawableLeft="@drawable/gender_icon" card_view:drawablePadding="@dimen/_8sdp" style="@style/CustomTextAppearance_Light" />
                    <TextView card_view:textSize="@dimen/_14sdp" card_view:textColor="@color/black" card_view:gravity="top|bottom|center_vertical|fill_vertical|center|fill" card_view:id="@+id/tv_age" card_view:background="@color/white" card_view:paddingLeft="@dimen/_14sdp" card_view:paddingTop="@dimen/_8sdp" card_view:paddingRight="@dimen/_10sdp" card_view:paddingBottom="@dimen/_8sdp" card_view:layout_width="match_parent" card_view:layout_height="wrap_content" card_view:text="@string/age" card_view:drawableLeft="@drawable/calender_icon" card_view:drawablePadding="@dimen/_10sdp" style="@style/CustomTextAppearance_Light" />
                    <TextView card_view:textSize="@dimen/_14sdp" card_view:textColor="@color/black" card_view:gravity="top|bottom|center_vertical|fill_vertical|center|fill" card_view:id="@+id/tv_phone" card_view:background="@color/light_white" card_view:paddingLeft="@dimen/_14sdp" card_view:paddingTop="@dimen/_8sdp" card_view:paddingRight="@dimen/_10sdp" card_view:paddingBottom="@dimen/_8sdp" card_view:layout_width="match_parent" card_view:layout_height="wrap_content" card_view:text="@string/phone_number" card_view:drawableLeft="@drawable/phone_icon" card_view:drawablePadding="@dimen/_10sdp" style="@style/CustomTextAppearance_Light" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <LinearLayout card_view:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" card_view:orientation="horizontal" card_view:id="@+id/linear_confirm" card_view:background="@drawable/normal_blue" card_view:layout_width="match_parent" card_view:layout_height="UNKNOWN_DATA_0x7f0a013f" card_view:layout_marginLeft="@dimen/_35sdp" card_view:layout_marginTop="@dimen/_15sdp" card_view:layout_marginRight="@dimen/_35sdp" card_view:layout_marginBottom="@dimen/_15sdp" card_view:layout_alignParentBottom="true">
                <TextView card_view:textSize="@dimen/_16sdp" card_view:textColor="@color/white" card_view:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" card_view:layout_width="wrap_content" card_view:layout_height="match_parent" card_view:text="@string/start_vides_visit" style="@style/CustomTextAppearance_Light" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout card_view:id="@+id/relativeLayout" card_view:layout_width="match_parent" card_view:layout_height="wrap_content">
        <TextView card_view:textSize="@dimen/_18sdp" card_view:textColor="@color/white" card_view:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" card_view:layout_width="match_parent" card_view:layout_height="wrap_content" card_view:layout_marginTop="@dimen/_16sdp" card_view:text="@string/video_call" style="@style/CustomTextAppearance_Light" />
        <ImageView card_view:id="@+id/img_back" card_view:layout_width="wrap_content" card_view:layout_height="wrap_content" card_view:layout_margin="@dimen/_10sdp" card_view:src="@drawable/back_icon" />
        <TextView card_view:textSize="@dimen/_10sdp" card_view:textColor="@color/white" card_view:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" card_view:id="@+id/tv_cancel_appointment" card_view:padding="@dimen/_10sdp" card_view:layout_width="wrap_content" card_view:layout_height="wrap_content" card_view:text="@string/cancel_appointment" card_view:layout_alignParentRight="true" style="@style/CustomTextAppearance_Light" />
    </RelativeLayout>
</RelativeLayout>
