<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@id/parent" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:background="@drawable/header" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a0078" />
    <ImageView android:id="@+id/img_header" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_90sdp" android:src="@drawable/header_img" android:layout_centerHorizontal="true" />
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/img_header">
        <RelativeLayout android:orientation="horizontal" android:background="@drawable/only_black_border" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a013f" android:layout_marginLeft="@dimen/_30sdp" android:layout_marginTop="@dimen/_20sdp" android:layout_marginRight="@dimen/_30sdp">
            <ImageView android:id="@+id/imaPwd" android:layout_width="UNKNOWN_DATA_0x7f0a00d0" android:layout_height="UNKNOWN_DATA_0x7f0a00d0" android:layout_marginLeft="@dimen/_5sdp" android:layout_marginRight="@dimen/_5sdp" android:src="@drawable/email_icon" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <View android:id="@+id/vLine" android:background="@color/app_text" android:layout_width="UNKNOWN_DATA_0x7f0a008e" android:layout_height="match_parent" android:layout_toRightOf="@+id/imaPwd" />
            <EditText android:textSize="@dimen/_14sdp" android:textColor="@color/app_text" android:textColorHint="@color/app_text" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@+id/et_email" android:background="@color/transparent" android:paddingLeft="@dimen/_10sdp" android:paddingRight="@dimen/_5sdp" android:layout_width="match_parent" android:layout_height="match_parent" android:hint="@string/email_address" android:singleLine="true" android:layout_toLeftOf="@+id/img_show_pwd" android:layout_toRightOf="@+id/vLine" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone|time" android:textCursorDrawable="0x0" style="@style/CustomTextAppearance_Light" />
            <ImageView android:id="@+id/img_old_pwd" android:tag="@string/hide" android:padding="@dimen/_5sdp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/private_change" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="@dimen/_35sdp">
            <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="horizontal" android:id="@+id/linear_reset_password" android:background="@drawable/blue_btn_selctor" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a013f" android:layout_marginLeft="@dimen/_40sdp" android:layout_marginRight="@dimen/_40sdp" android:layout_marginBottom="@dimen/_15sdp">
                <TextView android:textSize="@dimen/_16sdp" android:textColor="@color/white" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/reset_password" style="@style/CustomTextAppearance_Light" />
            </LinearLayout>
            <TextView android:textSize="@dimen/_14sdp" android:textColor="@color/app_text" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/tv_register" android:paddingLeft="@dimen/_20sdp" android:paddingRight="@dimen/_20sdp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/_10sdp" android:text="@string/a_link_will_be_sent_to__your_email_id" android:layout_alignParentBottom="true" style="@style/CustomTextAppearance_Light" />
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/_20sdp" android:textColor="@color/white" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_48sdp" android:text="@string/forget_password_title" style="@style/CustomTextAppearance_Light" />
        <ImageView android:id="@+id/img_back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/_10sdp" android:src="@drawable/back_icon" />
    </RelativeLayout>
</RelativeLayout>
